2010-07-16  Asa Ayers  <Asa.Ayers@Gmail.com>

- Added an interface to be able to view what you have invested in. I still need to build a way to modify this information,
- Bug fix

2010-07-14  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed Bug #9 - If existing items have 0c invested, increase them all to match the first transaction that changes their price.

2010-07-11  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed a bug with the mail where items get recorded by the mail scanner and the bag scanner.
- Fixed some minor issues not visible to the user.

2010-07-08  Asa Ayers  <Asa.Ayers@Gmail.com>

- Added a (hopefully) more readable changelog.
- I have removed the ability to show debug messages in the chat window and have replaced it with a new debug frame. /ia debug will show all of the debug messages and everything that IA has printed.
- Fix a small bug so that if you sell something for your exact cost you don't get a message that says you made a profit of 0c.
- Added more debug messages
- The debug window will scroll with the scroll wheel

2010-07-06  Asa Ayers  <Asa.Ayers@Gmail.com>

- Changed QA to be an option part of /ia queue. If QA is there, IA will queue enough of an item to be created to have 1.25x QA auctino count x QA stack size (rounded up) items. If it is not there, it will create 1 on every profitable item. This commit also adds support for Auctioneer.

2010-07-04  Asa Ayers  <Asa.Ayers@Gmail.com>

- Added options for the crafting threshold and auction threshold. I also fixed the queue to use the item cost to determine if there is enough profit instead of the auction (QA) threshold which already has profit built in.
- Expanded the queue system to calculate what the new QA threshold would be and to consider buying items from vendors. It also sets a threshold so that items with less than 5g profit will not be crafted. I will turn this into an option later.

2010-07-03  Asa Ayers  <Asa.Ayers@Gmail.com>
